Commit first batch of reducing pull request pollution