@@ -1,16 +1,15 @@
 package com.octosign.whitelabel.communication.server;
 
-import com.google.common.collect.ImmutableMap;
+import java.nio.charset.StandardCharsets;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Map;
+
 import com.octosign.whitelabel.communication.MimeType;
 import com.octosign.whitelabel.communication.server.format.BodyFormat;
 import com.octosign.whitelabel.error_handling.Code;
 import com.octosign.whitelabel.error_handling.IntegrationException;
 import com.sun.net.httpserver.HttpExchange;
-
-import java.nio.charset.StandardCharsets;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Map;
 
 import static com.octosign.whitelabel.communication.server.format.StandardBodyFormats.JSON;
 
@@ -18,7 +17,7 @@ public class Request<T> {
 
     private final HttpExchange exchange;
 
-    private final Map<MimeType, BodyFormat> BODY_FORMATS = ImmutableMap.of(
+    private final Map<MimeType, BodyFormat> bodyFormats = Map.of(
         MimeType.JSON, JSON,
         MimeType.PLAIN, JSON, // Plain is considered JSON so clients can prevent CORS preflight
         MimeType.ANY, JSON // Implicit default format
@@ -38,17 +37,23 @@ public class Request<T> {
         }
     }
 
-    public T getBody() { return body; }
+    public HttpExchange getExchange() {
+        return exchange;
+    }
 
-    public HttpExchange getExchange() { return exchange; }
-
-    public BodyFormat getBodyFormat() { return bodyFormat; }
+    public BodyFormat getBodyFormat() {
+        return bodyFormat;
+    }
 
     /**
      * List of supported body MIME types
      */
     public List<MimeType> getSupportedBodyFormats() {
-        return new ArrayList<>(BODY_FORMATS.keySet());
+        return new ArrayList<>(bodyFormats.keySet());
+    }
+
+    public T getBody() {
+        return body;
     }
 
     /**
@@ -56,6 +61,7 @@ public class Request<T> {
      *
      * Must be called only once
      *
+     * @param <T> Expected object in the body
      * @param bodyClass Class of the expected object in the body
      */
     public T processBody(Class<T> bodyClass) {
@@ -71,16 +77,16 @@ public class Request<T> {
 
     public <U extends Map<String, List<String>>> BodyFormat extractBodyFormat(U source) {
         var contentType = source.get("Content-Type");
-        var defaultBodyFormat = BODY_FORMATS.get(MimeType.ANY);
+        var defaultBodyFormat = bodyFormats.get(MimeType.ANY);
         if (contentType == null)
             return defaultBodyFormat;
 
         var contentMimeType = MimeType.parse(contentType.get(0));
 
-        return BODY_FORMATS.keySet().stream()
+        return bodyFormats.keySet().stream()
                 .filter(m -> m.equalsTypeSubtype(contentMimeType))
                 .findFirst()
-                .map(BODY_FORMATS::get)
+                .map(bodyFormats::get)
                 .orElse(defaultBodyFormat);
     }
 }
